force-app/main/default/objects/Campaign/fields/Is_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Is_Marketing_Campaign__c</fullName>
    <description>For Backend Purpose. Will be checked if Campaign name ends with &quot; MI&quot;</description>
    <formula>RIGHT( TRIM(Name) , 3)  = &quot; MI&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Marketing Campaign?</label>
    <type>Checkbox</type>
</CustomField>