force-app/main/default/objects/Campaign/fields/Visible_to_Non_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Visible_to_Non_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visible to Non-Marketing</label>
    <type>Checkbox</type>
</CustomField>